<resources>
    <string name="app_name">TheGroup</string>


    <!--First Screen Strings-->
    <string name="login_name">LOGIN</string>
    <string name="user_name">Investor No</string>
    <string name="password">Password</string>
    <string name="login_print">or use Touch ID to login</string>

    <string name="price_screen">Prices</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="tab_preferred">Preferred</string>
    <string name="tab_active">Active</string>
    <string name="tab_gainers">Gainers</string>
    <string name="tab_losers">Losers</string>
    <string name="title_activity_login2">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- Strings related to price screen header -->

    <string name="company_name">Company</string>
    <string name="value">Value</string>
    <string name="percentage">%</string>
    <string name="bid">Bid</string>
    <string name="offer">Offer</string>
    <string name="current">Current</string>





<string-array name="entries">
    <item>tfbt</item>
    <item>tfbt</item>
    <item>tfbt</item>
    <item>tfbt</item>
    <item>tfbt</item>
    <item>tfbt</item>
    <item>tfbt</item>
    <item>tfbt</item>
    <item>tfbt</item>
    <item>tfbt</item>


</string-array>







</resources>
